<?xml version="1.0" encoding="UTF-8"?>
<!--
The MIT License

Copyright (c) 2004-2011, Sun Microsystems, Inc., Kohsuke Kawaguchi, id:sorokh

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.jenkins-ci</groupId>
    <artifactId>jenkins</artifactId>
    <version>1.90</version>
    <relativePath />
  </parent>

  <groupId>io.jenkins.jenkinsfile-runner</groupId>
  <artifactId>parent</artifactId>
  <version>${revision}${changelist}</version>
  <packaging>pom</packaging>

  <name>Jenkinsfile Runner</name>
  <description>Jenkinsfile runner parent POM</description>

  <licenses>
    <license>
      <name>The MIT license</name>
      <url>http://www.opensource.org/licenses/mit-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <modules>
    <module>bootstrap</module>
    <module>setup</module>
    <module>payload-dependencies</module>
    <module>payload</module>
    <module>app</module>
    <module>packaging-parent-resources</module>
    <module>packaging-parent-pom</module>
    <module>packaging-slim-parent-pom</module>
    <!-- more modules come from profiles -->
  </modules>

  <properties>
    <revision>1.0-beta-32</revision>
    <changelist>-SNAPSHOT</changelist>
    <gitHubRepo>jenkinsci/jenkinsfile-runner</gitHubRepo>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.level>11</java.level>
    <jenkins.version>2.375.4</jenkins.version>
    <jenkins.bom.baseline>bom-2.375.x</jenkins.bom.baseline>
    <jenkins.bom.version>2025.v816d28f1e04f</jenkins.bom.version>
    <jetty.version>10.0.12</jetty.version>
    <jenkins-test-harness.version>1952.v3a_b_0cd3f5a_03</jenkins-test-harness.version>
    <!--TODO: Reenable once all the issues are fixed (JENKINS-57353)-->
    <spotbugs.failOnError>false</spotbugs.failOnError>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.jenkins.tools.bom</groupId>
        <artifactId>${jenkins.bom.baseline}</artifactId>
        <version>${jenkins.bom.version}</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>org.jenkins-ci.main</groupId>
        <artifactId>jenkins-bom</artifactId>
        <version>${jenkins.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Extra libraries -->
      <dependency>
        <groupId>io.jenkins.lib</groupId>
        <artifactId>support-log-formatter</artifactId>
        <version>1.2</version>
      </dependency>
      <dependency> <!-- Upper bounds prevention between Pipeline as YAML and JCAsC-->
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.12.0</version>
      </dependency>

      <!-- Plugins -->
      <dependency>
        <groupId>org.jenkins-ci.plugins</groupId>
        <artifactId>pipeline-utility-steps</artifactId>
        <version>2.15.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.github.spotbugs</groupId>
      <artifactId>spotbugs-annotations</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <!-- to treat executable-war type of artifact correctly -->
        <groupId>org.jenkins-ci.tools</groupId>
        <artifactId>maven-hpi-plugin</artifactId>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestEntries>
              <Jenkins-ClassFilter-Whitelisted>true</Jenkins-ClassFilter-Whitelisted>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration combine.children="append">
          <tagNameFormat>@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>repo.jenkins-ci.org</id>
      <url>https://repo.jenkins-ci.org/public/</url>
      <!-- allow snapshots -->
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>repo.jenkins-ci.org</id>
      <url>https://repo.jenkins-ci.org/public/</url>
    </pluginRepository>
  </pluginRepositories>

  <scm>
    <connection>scm:git:git://github.com/${gitHubRepo}.git</connection>
    <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
    <url>https://github.com/${gitHubRepo}</url>
    <tag>${scmTag}</tag>
  </scm>

  <profiles>
    <profile>
      <id>package-vanilla</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>vanilla-package</module>
      </modules>
    </profile>
    <!-- Integration tests powered by https://github.com/jenkinsci/jenkinsfile-runner-test-framework -->
    <!--FIXME(oleg_nenashev): Not functional anymore, see https://github.com/jenkinsci/jenkinsfile-runner/issues/562
    <profile>
      <id>run-its</id>
      <modules>
        <module>tests</module>
      </modules>
    </profile>
    -->
    <profile>
      <id>jacoco</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>0.8.8</version>
            <executions>
              <execution>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
              </execution>
             <execution>
                <id>report</id>
                <phase>verify</phase>
                <goals>
                  <goal>report-aggregate</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <!-- TODO: delete once https://github.com/jenkinsci/pom/pull/138 is integrated -->
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${maven-surefire-plugin.version}</version>
            <configuration>
              <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true ${argLine}</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
